@@ -22,6 +22,8 @@
         - Added pipe object to implement KoralPipes.
         - Separated "service" from "widget" plugin embeddings.
         - Implemented preliminary host->plugin communication.
+        - Fixed matchID transformation to deal with textSigles
+          having dashes.
 
 0.36 2019-09-19
         - Rename all cookies to be independent
